# auto-git

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs
